--- a/win/msvc/TouchVGCore/TouchVGCore_vc10.vcxproj.filters
+++ b/win/msvc/TouchVGCore/TouchVGCore_vc10.vcxproj.filters
@@ -350,6 +350,9 @@
     <ClInclude Include="..\..\..\core\src\view\GcShapeDoc.h">
       <Filter>Source Files\view</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\core\include\view\girecordcanvas.h">
+      <Filter>Header Files\view</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\core\src\shape\mgbasicspreg.cpp">
@@ -521,6 +524,9 @@
       <Filter>Source Files\view</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\core\src\view\gimousehelper.cpp">
+      <Filter>Source Files\view</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\core\src\view\girecordcanvas.cpp">
       <Filter>Source Files\view</Filter>
     </ClCompile>
   </ItemGroup>
