--- a/win/msvc/TouchVGCore/TouchVGCore_vc9.vcproj
+++ b/win/msvc/TouchVGCore/TouchVGCore_vc9.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\core\include;..\..\..\core\include\canvas;..\..\..\core\include\test;..\..\..\core\include\geom;..\..\..\core\include\graph;..\..\..\core\include\shape;..\..\..\core\include\storage;..\..\..\core\include\shapedoc;..\..\..\core\include\jsonstorage;..\..\..\core\include\cmd;..\..\..\core\include\cmdobserver;..\..\..\core\include\cmdbase;..\..\..\core\include\cmdbasic;..\..\..\core\include\cmdmgr;..\..\..\core\include\view;..\..\..\core\include\export"
+				AdditionalIncludeDirectories="..\..\..\core\include;..\..\..\core\include\canvas;..\..\..\core\include\test;..\..\..\core\include\geom;..\..\..\core\include\graph;..\..\..\core\include\shape;..\..\..\core\include\storage;..\..\..\core\include\shapedoc;..\..\..\core\include\jsonstorage;..\..\..\core\include\cmd;..\..\..\core\include\cmdobserver;..\..\..\core\include\cmdbase;..\..\..\core\include\cmdbasic;..\..\..\core\include\cmdmgr;..\..\..\core\include\view;..\..\..\core\include\export;..\..\..\core\include\record"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -106,7 +106,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\core\include;..\..\..\core\include\canvas;..\..\..\core\include\test;..\..\..\core\include\geom;..\..\..\core\include\graph;..\..\..\core\include\shape;..\..\..\core\include\storage;..\..\..\core\include\shapedoc;..\..\..\core\include\jsonstorage;..\..\..\core\include\cmd;..\..\..\core\include\cmdobserver;..\..\..\core\include\cmdbase;..\..\..\core\include\cmdbasic;..\..\..\core\include\cmdmgr;..\..\..\core\include\view;..\..\..\core\include\export"
+				AdditionalIncludeDirectories="..\..\..\core\include;..\..\..\core\include\canvas;..\..\..\core\include\test;..\..\..\core\include\geom;..\..\..\core\include\graph;..\..\..\core\include\shape;..\..\..\core\include\storage;..\..\..\core\include\shapedoc;..\..\..\core\include\jsonstorage;..\..\..\core\include\cmd;..\..\..\core\include\cmdobserver;..\..\..\core\include\cmdbase;..\..\..\core\include\cmdbasic;..\..\..\core\include\cmdmgr;..\..\..\core\include\view;..\..\..\core\include\export;..\..\..\core\include\record"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -524,6 +524,14 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="record"
+				>
+				<File
+					RelativePath="..\..\..\core\src\record\recordshapes.cpp"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -871,6 +879,14 @@
 				>
 				<File
 					RelativePath="..\..\..\core\include\export\svgcanvas.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="record"
+				>
+				<File
+					RelativePath="..\..\..\core\include\record\recordshapes.h"
 					>
 				</File>
 			</Filter>
