--- a/win/msvc/TouchVGCore/TouchVGCore_vc9.vcproj
+++ b/win/msvc/TouchVGCore/TouchVGCore_vc9.vcproj
@@ -276,6 +276,10 @@
 				Name="geom"
 				>
 				<File
+					RelativePath="..\..\..\core\src\geom\fitcurves.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\core\src\geom\mgbase.cpp"
 					>
 				</File>
