R17: Optimize shape recording and playing.
Add recordShapes(..exts).
Fix GiCoreView::isStopping().
Add resetDoc(doc). Remove parameter from MgPlaying.submitShapes.
Add MgPlaying.
Add redraw(bool changed).
Add javaconst(1) for GiContext.
R17: Add loadFirstFrame(filename). Fix MgCmdManagerFactory for static _factories.
Add MgStringCallback to avoid char* pointer’s leak.
Restore changeCount too.
Add MgShapes::traverseByType().
Add traverseImageShapes() and MgFindImageCallback.
SystemClock.elapsedRealtime().
Add createDynamicShapes().
Add findShapeByImageID(doc).
Add getRedoIndex() and restoreRecord().

--- a/win/msvc/TouchVGCore/TouchVGCore_vc10.vcxproj
+++ b/win/msvc/TouchVGCore/TouchVGCore_vc10.vcxproj
@@ -105,6 +105,7 @@
     <ClInclude Include="..\..\..\core\src\view\GcGraphView.h" />
     <ClInclude Include="..\..\..\core\src\view\GcMagnifierView.h" />
     <ClInclude Include="..\..\..\core\src\view\GcShapeDoc.h" />
+    <ClInclude Include="..\..\..\core\src\view\gicoreviewimpl.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\core\src\cmdbase\mgcmddraw.cpp" />
@@ -165,6 +166,7 @@
     <ClCompile Include="..\..\..\core\src\view\GcGraphView.cpp" />
     <ClCompile Include="..\..\..\core\src\view\GcMagnifierView.cpp" />
     <ClCompile Include="..\..\..\core\src\view\GcShapeDoc.cpp" />
+    <ClCompile Include="..\..\..\core\src\view\gicoreplay.cpp" />
     <ClCompile Include="..\..\..\core\src\view\gicoreview.cpp" />
     <ClCompile Include="..\..\..\core\src\view\gimousehelper.cpp" />
     <ClCompile Include="..\..\..\core\src\view\girecordcanvas.cpp" />
