--- a/win/msvc/TouchVGCore/TouchVGCore_vc9.vcproj
+++ b/win/msvc/TouchVGCore/TouchVGCore_vc9.vcproj
@@ -504,7 +504,15 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\core\src\view\gicoreplay.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\core\src\view\gicoreview.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\core\src\view\gicoreviewimpl.h"
 					>
 				</File>
 				<File
