--- a/win/msvc/TouchVGCore/TouchVGCore_vc10.vcxproj
+++ b/win/msvc/TouchVGCore/TouchVGCore_vc10.vcxproj
@@ -39,6 +39,8 @@
     <ClInclude Include="..\..\..\core\include\cmd\mgselect.h" />
     <ClInclude Include="..\..\..\core\include\cmd\mgsnap.h" />
     <ClInclude Include="..\..\..\core\include\cmd\mgview.h" />
+    <ClInclude Include="..\..\..\core\include\export\girecordcanvas.h" />
+    <ClInclude Include="..\..\..\core\include\export\girecordshape.h" />
     <ClInclude Include="..\..\..\core\include\export\svgcanvas.h" />
     <ClInclude Include="..\..\..\core\include\geom\mgbase.h" />
     <ClInclude Include="..\..\..\core\include\geom\mgbox.h" />
@@ -77,8 +79,6 @@
     <ClInclude Include="..\..\..\core\include\storage\mgstorage.h" />
     <ClInclude Include="..\..\..\core\include\test\RandomShape.h" />
     <ClInclude Include="..\..\..\core\include\test\testcanvas.h" />
-    <ClInclude Include="..\..\..\core\include\view\girecordcanvas.h" />
-    <ClInclude Include="..\..\..\core\include\view\girecordshape.h" />
     <ClInclude Include="..\..\..\core\src\cmdbasic\mgcmderase.h" />
     <ClInclude Include="..\..\..\core\src\cmdmgr\mgcmdmgr_.h" />
     <ClInclude Include="..\..\..\core\src\cmdmgr\mgcmdselect.h" />
@@ -131,6 +131,7 @@
     <ClCompile Include="..\..\..\core\src\cmdmgr\mgcmdmgr_.cpp" />
     <ClCompile Include="..\..\..\core\src\cmdmgr\mgcmdselect.cpp" />
     <ClCompile Include="..\..\..\core\src\cmdmgr\mgsnapimpl.cpp" />
+    <ClCompile Include="..\..\..\core\src\export\girecordcanvas.cpp" />
     <ClCompile Include="..\..\..\core\src\export\svgcanvas.cpp" />
     <ClCompile Include="..\..\..\core\src\geom\fitcurves.cpp" />
     <ClCompile Include="..\..\..\core\src\geom\mgbase.cpp" />
@@ -169,7 +170,6 @@
     <ClCompile Include="..\..\..\core\src\view\gicoreplay.cpp" />
     <ClCompile Include="..\..\..\core\src\view\gicoreview.cpp" />
     <ClCompile Include="..\..\..\core\src\view\gimousehelper.cpp" />
-    <ClCompile Include="..\..\..\core\src\view\girecordcanvas.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{A7119A43-A135-413A-A852-F2945924AC17}</ProjectGuid>
