--- a/win/msvc/TouchVGCore/TouchVGCore_vc10.vcxproj.filters
+++ b/win/msvc/TouchVGCore/TouchVGCore_vc10.vcxproj.filters
@@ -565,7 +565,7 @@
     <ClCompile Include="..\..\..\core\src\record\recordshapes.cpp">
       <Filter>Source Files\record</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\core\src\view\gicoreplay.cpp">
+    <ClCompile Include="..\..\..\core\src\view\gicorerecord.cpp">
       <Filter>Source Files\view</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\core\src\export\girecordcanvas.cpp">
