--- a/win/msvc/TouchVGCore/TouchVGCore_vc9.vcproj
+++ b/win/msvc/TouchVGCore/TouchVGCore_vc9.vcproj
@@ -504,7 +504,7 @@
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\core\src\view\gicoreplay.cpp"
+					RelativePath="..\..\..\core\src\view\gicorerecord.cpp"
 					>
 				</File>
 				<File
