--- a/core/src/export/Makefile
+++ b/core/src/export/Makefile
@@ -7,6 +7,11 @@ INSTALL_DIR ?=$(ROOTDIR)/build
 CPPFLAGS    += -Wall \
                -I$(ROOTDIR)/core/include \
                -I$(ROOTDIR)/core/include/canvas \
+               -I$(ROOTDIR)/core/include/shape \
+               -I$(ROOTDIR)/core/include/graph \
+               -I$(ROOTDIR)/core/include/geom \
+               -I$(ROOTDIR)/core/include/jsonstorage \
+               -I$(ROOTDIR)/core/include/storage \
                -I$(ROOTDIR)/core/include/export
 
 all:        $(TARGET)
