R38: Add MgPathShape and output(path) for shapes.
Add append, setPath, setPoint and quadsTo for GiPath.
Add bezierBox1 and bezierBox4 for mgnear.
Add readIntArray and writeIntArray for MgStorage.

--- a/win/TouchVGCore/TouchVGCore_vc10.vcxproj
+++ b/win/TouchVGCore/TouchVGCore_vc10.vcxproj
@@ -70,6 +70,7 @@
     <ClInclude Include="..\..\core\include\shape\mgcomposite.h" />
     <ClInclude Include="..\..\core\include\shape\mggrid.h" />
     <ClInclude Include="..\..\core\include\shape\mgobject.h" />
+    <ClInclude Include="..\..\core\include\shape\mgpathsp.h" />
     <ClInclude Include="..\..\core\include\shape\mgshape.h" />
     <ClInclude Include="..\..\core\include\shape\mgshapes.h" />
     <ClInclude Include="..\..\core\include\shape\mgshapet.h" />
@@ -157,6 +158,7 @@
     <ClCompile Include="..\..\core\src\shape\mggrid.cpp" />
     <ClCompile Include="..\..\core\src\shape\mgline.cpp" />
     <ClCompile Include="..\..\core\src\shape\mglines.cpp" />
+    <ClCompile Include="..\..\core\src\shape\mgpathsp.cpp" />
     <ClCompile Include="..\..\core\src\shape\mgrdrect.cpp" />
     <ClCompile Include="..\..\core\src\shape\mgrect.cpp" />
     <ClCompile Include="..\..\core\src\shape\mgshape.cpp" />
