--- a/win/TouchVGCore/TouchVGCore_vc10.vcxproj.filters
+++ b/win/TouchVGCore/TouchVGCore_vc10.vcxproj.filters
@@ -383,6 +383,9 @@
     <ClInclude Include="..\..\core\include\export\girecordshape.h">
       <Filter>Header Files\export</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\core\include\shape\mgpathsp.h">
+      <Filter>Header Files\shape</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\core\src\shape\mgbasicspreg.cpp">
@@ -570,6 +573,9 @@
     </ClCompile>
     <ClCompile Include="..\..\core\src\export\girecordcanvas.cpp">
       <Filter>Source Files\export</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\core\src\shape\mgpathsp.cpp">
+      <Filter>Source Files\shape</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
