--- a/win/TouchVGCore/TouchVGCore_vc9.vcproj
+++ b/win/TouchVGCore/TouchVGCore_vc9.vcproj
@@ -351,6 +351,14 @@
 					RelativePath="..\..\core\src\jsonstorage\mgjsonstorage.cpp"
 					>
 				</File>
+				<File
+					RelativePath="..\..\core\src\jsonstorage\utf8_core.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\core\src\jsonstorage\utf8_unchecked.h"
+					>
+				</File>
 				<Filter
 					Name="rapidjson"
 					>
