--- a/win/TouchVGCore/TouchVGCore_vc10.vcxproj.filters
+++ b/win/TouchVGCore/TouchVGCore_vc10.vcxproj.filters
@@ -386,6 +386,12 @@
     <ClInclude Include="..\..\core\include\shape\mgpathsp.h">
       <Filter>Header Files\shape</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\core\src\jsonstorage\utf8_core.h">
+      <Filter>Source Files\jsonstorage</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\core\src\jsonstorage\utf8_unchecked.h">
+      <Filter>Source Files\jsonstorage</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\core\src\shape\mgbasicspreg.cpp">
